--- a/style.css
+++ b/style.css
@@ -38,8 +38,25 @@ body {
 #Widzew {
   background-color: rgb(153, 19, 19);
   display: flex;
-  height: 100px;
-  margin: 10px;
+  height: 115px;
+}
+
+#crest {
+  display: flex;
+  font-size: 40px;
+  color: aliceblue;
+  justify-content: space-between;
+  align-items: center;
+  width: 350px;
+  margin-left: 360px;
+  height: 90px;
+  margin-top: 10px;
+}
+
+#audioButtons {
+}
+
+#shopButtons {
 }
 
 #navigation {
