--- a/style.css
+++ b/style.css
@@ -265,7 +265,7 @@ body {
   width: 280px;
 }
 
-#part1 {
+.part1 {
   color: #cca34a;
   display: flex;
   justify-content: left;
@@ -292,7 +292,7 @@ body {
   font-size: 15px;
 }
 
-#part2 {
+.part2 {
   display: flex;
   justify-content: space-between;
   align-items: start;
@@ -322,7 +322,7 @@ body {
   margin-bottom: 5px;
 }
 
-#part2 span {
+.part2 span {
   width: 73px;
   height: 47px;
   border: solid #cca34a 1px;
@@ -336,20 +336,20 @@ body {
   padding-bottom: 3px;
 }
 
-#part3 {
+.part3 {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 20px;
 }
 
-#part4 {
+.part4 {
   width: 280px;
   display: flex;
   justify-content: center;
 }
 
-#part4 button {
+.part4 button {
   width: 70px;
   height: 50px;
   border: solid #cca34a 2px;
@@ -358,3 +358,24 @@ body {
   justify-content: center;
   align-items: center;
 }
+
+/* #hour {
+  background-color: none;
+  border: none;
+} */
+
+#matchbox2 > .middle {
+  height: 300px;
+  width: 500px;
+}
+
+#matchbox2 .middle .part1 img {
+  z-index: 1;
+  position: absolute;
+  margin-left: 394px;
+}
+
+.matchbox13 .middle .part1 img {
+  margin-left: 50px;
+}
+#matchbox2 .middle .part1;
