--- a/style.css
+++ b/style.css
@@ -444,3 +444,43 @@ body {
   width: 380px;
   height: 230px;
 }
+
+#redSection {
+  height: 60%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#news {
+  width: 62%;
+  padding: 70px;
+}
+
+#newsLine1 {
+  height: 65px;
+  display: flex;
+  justify-content: left;
+}
+
+#newsLine1 h1 {
+  font-size: 50px;
+  color: aliceblue;
+  margin: 0px;
+  padding-right: 40px;
+}
+
+#newsLine1 div {
+  font-size: 15px;
+  color: aliceblue;
+  display: flex;
+  align-items: end;
+  justify-content: space-around;
+  width: 500px;
+}
+
+#newsLine1 div a {
+  color: aliceblue;
+}
