--- a/style.css
+++ b/style.css
@@ -734,13 +734,44 @@ body {
   align-items: center;
 }
 
+#multimedia h1 {
+  width: 1200px;
+  font-size: 60px;
+  margin: 120px 0px 30px;
+  font-weight: 600;
+}
+
 #multimediaNavigation {
   width: 1200px;
-  height: 55px;
+  height: 56px;
   display: flex;
+  font-size: 15px;
+  font-weight: 700;
 }
 
 #navigationBoxOne {
+  background-color: rgb(153, 19, 19);
+  color: #cca34a;
+  width: 118px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 30px;
+}
+
+#navigationBoxTwo {
+  width: 96px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#navigationBoxThree {
+  width: 220px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 855px;
 }
 
 #multimediaBox {
@@ -762,4 +793,5 @@ body {
   flex-direction: column;
   justify-content: space-between;
   align-items: end;
+  padding: 30px 30px 30px 0px;
 }
