--- a/style.css
+++ b/style.css
@@ -782,7 +782,7 @@ body {
   justify-content: space-between;
 }
 
-#multimediaBox iframe {
+#multimediaBox > img {
   width: 653px;
   height: 367px;
   padding: 30px 0px 30px 30px;
@@ -794,4 +794,18 @@ body {
   justify-content: space-between;
   align-items: end;
   padding: 30px 30px 30px 0px;
+}
+
+.videos {
+  height: 96px;
+  width: 466px;
+  display: flex;
+  justify-content: space-between;
+  padding: 0px;
+  background-color: rgb(153, 19, 19);
+}
+
+.videos img {
+  width: 180px;
+  height: 96px;
 }
