--- a/style.css
+++ b/style.css
@@ -875,3 +875,28 @@ body {
 #advertiseTwo {
   padding: 30px;
 }
+
+#goalsAndAchievements {
+  display: flex;
+  justify-content: center;
+  background-color: rgb(153, 19, 19);
+}
+
+#team {
+  width: 1280px;
+  height: 55vh;
+  padding: 30px 40px;
+}
+
+#team > h2 {
+  font-size: 60px;
+  font-weight: 600;
+  color: aliceblue;
+}
+
+#team > div {
+  display: flex;
+}
+
+#achievements {
+}
