--- a/style.css
+++ b/style.css
@@ -1016,3 +1016,20 @@ body {
   font-weight: 600;
   display: block;
 }
+
+#sponsors {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  width: 99vw;
+}
+
+#sponsorOne {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#sponsorTwo {
+}
