--- a/style.css
+++ b/style.css
@@ -1017,11 +1017,13 @@ body {
   display: block;
 }
 
-#sponsors {
+#partners {
   background-color: white;
   display: flex;
   flex-direction: column;
+  align-items: center;
   width: 99vw;
+  padding: 30px 0;
 }
 
 #sponsorOne {
@@ -1031,5 +1033,44 @@ body {
   align-items: center;
 }
 
+#sponsorOne > h2 {
+  font-size: 55px;
+  font-weight: 600;
+  margin: 30px 0 60px 0;
+}
+
+#sponsorOne > p {
+  font-size: 15px;
+  margin: 0px;
+}
+
 #sponsorTwo {
+  display: flex;
+  justify-content: space-between;
+  width: 1280px;
+  padding: 30px 40px;
+}
+
+#sponsorTwo > div {
+  width: 246px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#sponsorTwo > button {
+  background-color: white;
+  border: none;
+  font-weight: 600;
+  font-size: 20px;
+}
+
+#partners > button {
+  width: 185px;
+  height: 51px;
+  border: solid 2px #cca34a;
+  color: #cca34a;
+  background-color: white;
+  font-size: 13px;
+  font-weight: 700;
 }
