--- a/style.css
+++ b/style.css
@@ -1074,3 +1074,59 @@ body {
   font-size: 13px;
   font-weight: 700;
 }
+
+#contact {
+  background-color: rgb(153, 19, 19);
+  display: flex;
+  justify-content: center;
+}
+
+#contact > div {
+  width: 1200px;
+  height: 117px;
+  display: flex;
+  padding: 20px 0 30px;
+}
+
+#contact > div > div {
+  width: 400px;
+}
+
+#contact div p {
+  font-size: 14px;
+  font-weight: 700;
+  color: white;
+}
+
+#adress {
+  display: flex;
+}
+
+#adress > div {
+  display: flex;
+  flex-direction: column;
+  margin-left: 20px;
+  width: 200px;
+}
+
+#adress > div > a {
+  color: #cca34a;
+  font-weight: 300;
+  font-size: 16px;
+}
+
+#joinUs {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#email {
+  display: flex;
+  flex-direction: column;
+}
+
+#email div {
+  width: 350px;
+  height: 50px;
+}
